Fix spacing of bubble buttons in RTL.
Tiny change replaces margin-left with webkit-margin-start to properly
space controlled setting indicators in RTL.

R=dbeam@chromium.org

Review URL: https://codereview.chromium.org/338903002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@277676 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 678d7dee11dc94889e783f04a93c2a018b0a1e3b

--- a/ui/webui/resources/css/bubble_button.css
+++ b/ui/webui/resources/css/bubble_button.css
@@ -4,10 +4,10 @@
  */
 
 .bubble-button {
+  -webkit-margin-start: 4px;
   display: inline-block;
   height: 0;
   line-height: 1;
-  margin-left: 4px;
   vertical-align: middle;
   width: 16px;
 }
